# cjpeg_encode_decoder

./: .gitignore  README.md
ffmpeg_jpeg/: CMakeLists.txt  README.md  main.cpp
jpeg_demo/: CMakeLists.txt
jpeg_demo/SpecialVIJPG/: SpecialVIJPG.cpp  SpecialVIJPG.h  SpecialVIJPGDlg.cpp  SpecialVIJPGDlg.h  jidctflt.cpp  jpeg_dec.plg  loadjpeg.cpp  loadjpeg.h  resource.h  stdafx.cpp  stdafx.h  stdint.h  tinyjpeg-internal.h  tinyjpeg.cpp  tinyjpeg.h
jpeg_demo/jpeg_ffmpeg/: CMakeLists.txt  main.cpp
jpeg_demo/tinyjpeg/: jpeg_encoder.cpp  jpeg_encoder.h  tiny_jpeg.h
